# regression-pilot

./: .gitignore  LICENSE  README.md
backend/: ai_service.py  config.py  jira_service.py  main.py  pytest.ini  requirements.txt  run_tests.ps1  zephyr_service.py
backend/api/: ai_routes.py  config_routes.py  health_routes.py  jira_routes.py  session_routes.py  zephyr_routes.py
backend/config/: __init__.py  logging_config.py  preferences.py  settings.py
backend/db/: connection.py  init.py  schema.py
backend/schemas/: request_models.py
backend/services/: ai_service.py  config_service.py  jira_service.py  session_service.py  zephyr_service.py
backend/tests/: README.md  conftest.py
backend/tests/api/: test_config_routes.py  test_health_routes.py  test_session_routes.py
backend/tests/config/: test_preferences.py  test_settings.py
backend/tests/schemas/: test_request_models.py
backend/tests/services/: test_ai_service_helpers.py  test_config_service.py
backend/tests/utils/: test_crypto.py  test_keyring_store.py  test_secret_scanner.py
backend/utils/: crypto.py  http_errors.py  keyring_store.py  secret_scanner.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: ChatView.tsx  GenerateView.tsx  ReviewView.tsx  SelectView.tsx  SetupView.tsx  Sidebar.tsx
frontend/src/dev/: LibraryPreview.tsx
(+31 files in other folders)
