[package]
name = "regression-pilot"
version = "0.1.0"
description = "Regression test case generator for HCSS E360"
authors = ["Michael"]
edition = "2021"

[lib]
name = "regression_pilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
